--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@atlaskit/css-reset": "^3.0.2",
     "classnames": "^2.2.6",
     "lodash.debounce": "^4.0.8",
+    "merge": "^1.2.1",
     "react": "^16.5.2",
     "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.5.2",
